--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -260,6 +260,12 @@
         }
       }
     }
+    .cached,
+    .saved{
+      @include media-breakpoint-up(md){
+        min-width: 550px;
+      };
+    }
   }
 }
 .signin-list{
