--- a/src/scss/modules/_blocks.scss
+++ b/src/scss/modules/_blocks.scss
@@ -676,19 +676,12 @@
       max-width: 120px;
     };
   }
-  .garage-dropdown{
-    border-top-width: 1px;
-    border-color: $dark-gray;
-  }
 }
 .garage-dropdown{
   padding-top: 0;
   .cached,
   .saved{
     padding: 15px 15px 0;
-    @include media-breakpoint-up(md){
-      min-width: 550px;
-    };
   }
   .media{
     padding-bottom: 12px;
@@ -1009,5 +1002,11 @@
       padding-top: 10px;
       padding-bottom: 20px;
     }
+  }
+}
+.vin-modal,.garage-select{
+  .garage-dropdown{
+    border-top-width: 1px;
+    border-color: $dark-gray;
   }
 }
